<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".ui.users.RegisterLectorActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/title_activity_lector"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtRNombreLector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/lector_name"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:minHeight="48dp"
        android:textColorHint="#757575"/>

    <EditText
        android:id="@+id/txtREmailLector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/lector_email"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:minHeight="48dp"
        android:textColorHint="#757575"/>

    <EditText
        android:id="@+id/txtRContraLector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/lector_password"
        android:inputType="textPassword"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:minHeight="48dp"
        android:textColorHint="#757575"/>

    <EditText
        android:id="@+id/txtRreContraLector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/lector_confirm_password"
        android:inputType="textPassword"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="45dp"
        android:minHeight="48dp"
        android:textColorHint="#757575"/>

    <Button
        android:id="@+id/btnRegistrarLector"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lector_register_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"/>

    <Button
        android:id="@+id/btnRegistrarLectorGoogle"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lector_register_with_google_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"/>

    <!-- colocar algo para agregar una foto pero que sea opcional-->
    <!--  <string name="lector_picture_label">Foto de Perfil</string>
    <string name="lector_picture_button">Seleccionar Foto</string>
     -->

</LinearLayout>
