<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".ui.users.RegisterInvestigatorActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/investigator_register_title"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtRNombreInvest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/investigator_name"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:minHeight="48dp"
        android:textColorHint="#757575"/>

    <EditText
        android:id="@+id/txtREmailInvest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/investigator_email"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:minHeight="48dp"
        android:textColorHint="#757575"/>

    <EditText
        android:id="@+id/txtRContraInvest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/investigator_password"
        android:inputType="textPassword"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:minHeight="48dp"
        android:textColorHint="#757575"/>

    <EditText
        android:id="@+id/txtRreContraInvest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/investigator_confirm_password"
        android:inputType="textPassword"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:minHeight="48dp"
        android:textColorHint="#757575"/>



    <!--    <string name="investigator_grade">Grado Académico</string>
    tenia planeado poner un tipo desplegable o algo que mostrarse los grados academicos y el usuario solo lo seleccioanse
     pero tambien como se podria registrar el grado si se registra con el correo electronico, ya que le dato no se esta tomando directamente-->


    <EditText
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/investigator_description"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:layout_marginBottom="45dp"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/btnRegistrarInvest"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/investigator_register_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"/>

    <Button
        android:id="@+id/btnRegistrarInvestGoogle"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/investigator_register_with_google_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"/>


    <!-- colocar algo para agregar una foto pero que sea opcional-->
    <!--  <string name="investigator_picture_label">Foto de Perfil</string>
    <string name="investigator_picture_button">Seleccionar Foto</string>
     -->

</LinearLayout>
